tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_80.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((((z * 1) * (z + 1223)) + ((0 DIV 0) DIV (y DIV 2))) < ((- (2 * 0)) * ((+ y) - (+ 2))));
               y := (((- (- 1)) DIV ((0 + 200) * (- 2))) DIV (+ ((1223 MOD 0) - (- x))));
               q := ((+ ((2 MOD 200) MOD (+ x))) # (+ ((y DIV 0) MOD (+ 0))));
               q := ((((200 + y) DIV (- x)) = ((2 * y) - (200 * y))) & ((- (x DIV 200)) <= ((- 1) * (2 MOD 2))));
               y := ((((+ z) + (+ 1)) DIV ((+ 1223) + (200 DIV 0))) + (- ((z - z) - (+ 200))));
               r := (((+ (y - x)) * ((2 MOD z) - (x * x))) = ((+ (- 1)) DIV ((z + z) * (200 + 1223))));
               p := ((((x - z) * (+ 1223)) <= (+ (+ z))) OR ((- (- 1223)) > ((x + 2) * (z DIV 1223))));
  (* error *)  q := ((((- r) MOD (- y)) >= ((1223 * 200) MOD (0 MOD 1))) & (((1223 * 200) - (1 DIV 1223)) = ((y * 2) DIV (z - 1223))));
               q := ((- ((1 + 0) MOD (- 0))) = (((+ 1223) * (+ 0)) - ((- 1223) DIV (+ 0))));
               z := (((- (2 * z)) MOD ((x + z) MOD (- 1223))) * (((0 - 1) * (x * x)) + (+ (200 DIV 1))))
END Test18.